--- a/index.html
+++ b/index.html
@@ -1274,36 +1274,36 @@
            81%
           </div>
           <div style="font-size: 12px; color: #718096;">
-           Hài lòng 😊
+           Hài lòng 
           </div>
          </div>
         </div><!-- Chi tiết số liệu học sinh -->
         <div style="margin-top: 20px; background: #f8fafc; border-radius: 8px; padding: 16px; text-align: left; max-width: 280px; margin-left: auto; margin-right: auto;">
-         <h6 style="font-size: 14px; font-weight: 600; color: #2d3748; margin-bottom: 12px; text-align: center;">Chi tiết mức độ hài lòng 📊</h6>
+         <h6 style="font-size: 14px; font-weight: 600; color: #2d3748; margin-bottom: 12px; text-align: center;">Chi tiết mức độ hài lòng </h6>
          <div style="display: flex; flex-direction: column; gap: 6px; font-size: 12px;">
           <div style="display: flex; justify-content: space-between; align-items: center;">
            <div style="display: flex; align-items: center; gap: 6px;">
-            <div style="width: 8px; height: 8px; background: #e53e3e; border-radius: 50%;"></div><span style="color: #4a5568;">😞 Rất không hài lòng</span>
+            <div style="width: 8px; height: 8px; background: #e53e3e; border-radius: 50%;"></div><span style="color: #4a5568;"> Rất không hài lòng</span>
            </div><span style="font-weight: 600; color: #e53e3e;">2%</span>
           </div>
           <div style="display: flex; justify-content: space-between; align-items: center;">
            <div style="display: flex; align-items: center; gap: 6px;">
-            <div style="width: 8px; height: 8px; background: #f56565; border-radius: 50%;"></div><span style="color: #4a5568;">😐 Không hài lòng</span>
+            <div style="width: 8px; height: 8px; background: #f56565; border-radius: 50%;"></div><span style="color: #4a5568;"> Không hài lòng</span>
            </div><span style="font-weight: 600; color: #f56565;">5%</span>
           </div>
           <div style="display: flex; justify-content: space-between; align-items: center;">
            <div style="display: flex; align-items: center; gap: 6px;">
-            <div style="width: 8px; height: 8px; background: #d69e2e; border-radius: 50%;"></div><span style="color: #4a5568;">😊 Bình thường</span>
+            <div style="width: 8px; height: 8px; background: #d69e2e; border-radius: 50%;"></div><span style="color: #4a5568;"> Bình thường</span>
            </div><span style="font-weight: 600; color: #d69e2e;">12%</span>
           </div>
           <div style="display: flex; justify-content: space-between; align-items: center;">
            <div style="display: flex; align-items: center; gap: 6px;">
-            <div style="width: 8px; height: 8px; background: #48bb78; border-radius: 50%;"></div><span style="color: #4a5568;">😄 Hài lòng</span>
+            <div style="width: 8px; height: 8px; background: #48bb78; border-radius: 50%;"></div><span style="color: #4a5568;"> Hài lòng</span>
            </div><span style="font-weight: 600; color: #48bb78;">38%</span>
           </div>
           <div style="display: flex; justify-content: space-between; align-items: center;">
            <div style="display: flex; align-items: center; gap: 6px;">
-            <div style="width: 8px; height: 8px; background: #38a169; border-radius: 50%;"></div><span style="color: #4a5568;">🤩 Rất hài lòng</span>
+            <div style="width: 8px; height: 8px; background: #38a169; border-radius: 50%;"></div><span style="color: #4a5568;"> Rất hài lòng</span>
            </div><span style="font-weight: 600; color: #38a169;">43%</span>
           </div>
          </div>
@@ -1320,11 +1320,10 @@
       </div>
       <div style="background: linear-gradient(135deg, #e6fffa 0%, #f0fff4 100%); border-radius: 12px; padding: 24px; text-align: center;">
        <div style="font-size: 32px; margin-bottom: 16px;">
-        🎯
        </div>
        <p style="color: #2f855a; font-size: 18px; font-weight: 600; margin-bottom: 12px;">Tổng kết trải nghiệm người dùng 🌟</p>
        <p style="color: #38a169; font-size: 16px; line-height: 1.6; margin: 0;">Phần mềm được đánh giá dễ sử dụng, tốc độ phản hồi tức thời; độ chính xác của lịch cao; giao diện phần mềm thân thiện và dễ tiếp cận! 🎨✨<br><br>
-         Mức độ hài lòng chung tổng thể của giáo viên và học sinh lần lượt đạt 90% và 81% (trung bình 81,42%). 🎉📊</p>
+         Mức độ hài lòng chung tổng thể của giáo viên và học sinh lần lượt đạt 90% và 81% (trung bình 81,42%). </p>
       </div>
      </div>
     </div><!-- Thảo luận kết quả -->
@@ -1349,13 +1348,13 @@
         </thead>
         <tbody>
          <tr style="border-bottom: 1px solid #e2e8f0;">
-          <td style="padding: 16px; font-weight: 500; color: #2d3748; border-right: 1px solid #e2e8f0;">SUS Score 📊</td>
+          <td style="padding: 16px; font-weight: 500; color: #2d3748; border-right: 1px solid #e2e8f0;">SUS Score </td>
           <td style="padding: 16px; text-align: center; color: #4a5568; border-right: 1px solid #e2e8f0;">≥ 75</td>
           <td style="padding: 16px; text-align: center; color: #38a169; font-weight: 600; border-right: 1px solid #e2e8f0;">82,45</td>
           <td style="padding: 16px; text-align: center;"><span style="background: #f0fff4; color: #38a169; padding: 4px 8px; border-radius: 12px; font-size: 12px; font-weight: 500;">✅ Đạt</span></td>
          </tr>
          <tr style="border-bottom: 1px solid #e2e8f0; background: #f8fafc;">
-          <td style="padding: 16px; font-weight: 500; color: #2d3748; border-right: 1px solid #e2e8f0;">Uptime 🚀</td>
+          <td style="padding: 16px; font-weight: 500; color: #2d3748; border-right: 1px solid #e2e8f0;">Uptime </td>
           <td style="padding: 16px; text-align: center; color: #4a5568; border-right: 1px solid #e2e8f0;">≥ 99.9%</td>
           <td style="padding: 16px; text-align: center; color: #38a169; font-weight: 600; border-right: 1px solid #e2e8f0;">100%</td>
           <td style="padding: 16px; text-align: center;"><span style="background: #f0fff4; color: #38a169; padding: 4px 8px; border-radius: 12px; font-size: 12px; font-weight: 500;">✅ Đạt</span></td>
@@ -1404,7 +1403,7 @@
        </div>
        <h4 style="font-size: 16px; font-weight: 600; color: #2d3748; margin-bottom: 8px;">Trường THPT Nguyễn Khuyến</h4>
        <p style="color: #4a5568; font-size: 14px; margin: 0; line-height: 1.5;">Địa chỉ: THPT Nguyễn Khuyến, Hòa Hưng, TP.HCM<br>
-         Website: <a href="#" style="color: #667eea; text-decoration: none;">thptnk.edu.vn</a></p>
+         Website: <a href="#" style="color: #667eea; text-decoration: none;">https://nckhthptnk.github.io/minitkb/</a></p>
       </div><!-- Giáo viên hướng dẫn -->
       <div style="background: #f8fafc; border-radius: 12px; padding: 24px; text-align: center; border-left: 4px solid #38a169;">
        <div style="font-size: 32px; margin-bottom: 12px;">
@@ -1412,7 +1411,6 @@
        </div>
        <h4 style="font-size: 16px; font-weight: 600; color: #2d3748; margin-bottom: 8px;">Thầy Nguyễn Thành Luân</h4>
        <p style="color: #4a5568; font-size: 14px; margin: 0; line-height: 1.5;">Giáo viên hướng dẫn<br>
-         Bộ môn: Tin học</p>
       </div><!-- Nhóm thực hiện -->
       <div style="background: #f8fafc; border-radius: 12px; padding: 24px; text-align: center; border-left: 4px solid #ed8936;">
        <div style="font-size: 32px; margin-bottom: 12px;">
@@ -1435,3 +1433,4 @@
   </div>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9980a933f42cc7d2',t:'MTc2MjA1NTM1NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
