--- a/index.html
+++ b/index.html
@@ -1369,7 +1369,7 @@
    </div>
   </div>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'99807845a01fc7d2',t:'MTc2MjA1MzM1MS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
-</html>/div><!-- Page 6: Feedback -->
+</html><!-- Page 6: Feedback -->
   <div id="page-feedback" class="page">
    <div style="max-width: 800px; margin: 0 auto; padding: 64px 24px;">
     <h2 class="section-title" style="text-align: center;">💬 Feedback &amp; Góp ý 📝</h2><!-- Feedback Form -->
@@ -1425,12 +1425,10 @@
        💌
       </div>
       <p style="color: #2f855a; font-size: 16px; font-weight: 600; margin-bottom: 8px;">Mọi ý kiến đóng góp đều được trân trọng!</p>
-      <p style="color: #38a169; font-size: 14px; margin: 0; line-height: 1.6;">Chúng tôi cam kết phản hồi và cải thiện phần mềm dựa trên những góp ý quý báu từ người dùng. Cảm ơn bạn đã đồng hành cùng dự án! 🙏</p>
+      <p style="color: #38a169; font-size: 14px; margin: 0; line-height: 1.6;">Chúng tôi cam kết phản hồi và cải thiện phần mềm dựa trên những góp ý quý báu từ người dùng. Cảm ơn bạn đã đồng hành cùng dự án! </p>
      </div>
     </div>
    </div>
   </div>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9980a933f42cc7d2',t:'MTc2MjA1NTM1NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
-
-
